# ex-GPT-ai

./: .env.example  .gitignore  BROWSER_ERROR_FIX.md  Dockerfile  Dockerfile.admin  PROJECT_ANALYSIS.md  QUICK_START.md  README.md  RESTART_TEST_BACKEND.bat  SETUP_AND_RUN.bat  START.bat  START_ALL.bat  START_IMPROVED.bat  START_QUICK.bat  START_REAL_AI.bat  START_SIMPLE.py  START_SYSTEM.bat  check_system.ps1  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  test_services.py  verify_setup.py
.claude/: settings.local.json
backend/: .env.example  Dockerfile  README.md  __init__.py  chat_api_addition.txt  main.py  pyproject.toml  requirements.txt  run.sh  run_ai.py  run_cpu.sh  simple_test.py
backend/app/: __init__.py
backend/app/api/v1/: cctv_search.py  files.py  ocr.py  router.py  stt.py
backend/app/core/: __init__.py  config.py  database.py  exceptions.py  logging.py  middleware.py
backend/app/models/: __init__.py  schemas.py
backend/app/services/: cache_service.py  image_search.py  multimodal_chat.py  ollama_client.py
backend/app/utils/: logger.py
backend/src/multimodal/: __init__.py  main.py
backend/src/multimodal/api/endpoints/: cctv.py  embedding.py  health.py  image.py  stt.py
backend/src/multimodal/config/: settings.py
backend/src/multimodal/models/: stt_models.py
backend/src/multimodal/services/: cctv_service.py  embedding_service.py  image_service.py  qdrant_service.py  whisper_service.py
backend/src/multimodal/utils/: file_utils.py
backend/tests/: test_files.py
config/: development.yaml  settings.py
frontend/: RECOVERY_GUIDE.md  TESTING_GUIDE.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  App_simple.jsx  index.scss
frontend/src/assets/components/Intro/: ContentLogo.jsx
frontend/src/assets/components/button/: DetailArrowIcon.jsx
frontend/src/assets/components/file/: FileDeleteIcon.jsx
frontend/src/assets/components/header/: Logo.jsx
frontend/src/assets/components/toast/: FailToastIcon.jsx  (+1 more)
frontend/src/components/content/: index.jsx
frontend/src/styles/default/: default.scss
frontend/src/utils/: exgptAPI.js  mockImageData.js
services/: __init__.py
services/damage-detection/: __init__.py  damage_detector.py
services/traffic-analysis/: __init__.py  traffic_analyzer.py
src/admin_tools/: admin_ui.py  upload_handler.py
src/api/: main.py
src/image_processing/: __init__.py  image_analyzer.py  ocr_engine.py  vlm_processor.py
src/rag_pipeline/: embeddings.py  vector_store.py
tests/: __init__.py  pytest.ini  test_api.py  test_image_processing.py
(+35 files in other folders)
