[project]
name = "ex-gpt-multimodal-backend"
version = "1.0.0"
description = "ex-GPT 멀티모달 백엔드 서비스 - 이미지, 음성, 비디오 처리 및 RAG 벡터 검색"
authors = [
    {name = "DataStreams", email = "dev@datastreams.co.kr"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.23",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    "asyncpg>=0.29.0",
    "cachetools>=5.3.2",
    "qdrant-client>=1.7.0",
    "sentence-transformers>=2.2.2",
    "transformers>=4.36.0",
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "torchaudio>=2.1.0",
    "pillow>=10.1.0",
    "opencv-python>=4.8.1",
    "pytesseract>=0.3.10",
    "easyocr>=1.7.0",
    "whisper>=1.1.10",
    "openai-whisper>=20231117",
    "pydub>=0.25.1",
    "librosa>=0.10.1",
    "numpy>=1.24.3",
    "pandas>=2.1.4",
    "scikit-learn>=1.3.2",
    "httpx>=0.25.2",
    "aiofiles>=23.2.1",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.2",
    "prometheus-client>=0.19.0",
    "slowapi>=0.1.9",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "beautifulsoup4>=4.12.2",
    "pypdf>=3.17.4",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.2",
    "markdown>=3.5.1",
    "asyncio-mqtt>=0.16.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.1",
    "pre-commit>=3.6.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "src"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=app --cov-report=term-missing --cov-report=html"
asyncio_mode = "auto"
